<resources>
    <string name="app_name">SamanthaViews</string>
    <string name="click_to_remove">Click a note to remove it</string>
    <string name="start_station">start station</string>
    <string name="arrive_station">final station</string>
    <string name="arrow">arrow</string>
    <string name="vehicle">vehicle</string>
    <string name="travel_number">G1303</string>
    <string name="start_time">12:00</string>
    <string name="arrive_time">14:22</string>
    <string name="start_date">3月28日</string>
    <string name="arrive_date">3月28日</string>
    <string name="seat_number">3车6F号</string>
    <string name="direction">Direction</string>
    <string name="icon">icon</string>
</resources>
