<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/img_vehicle"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/vehicle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_start_station"
        app:layout_constraintVertical_chainStyle="spread"
        app:srcCompat="@drawable/ic_high_train"/>

    <TextView
        android:id="@+id/tv_travel_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/travel_number"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_start_station"
        app:layout_constraintVertical_chainStyle="spread"/>

    <TextView
        android:id="@+id/tv_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="1dp"
        android:gravity="center_vertical"
        android:text="@string/start_time"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintRight_toLeftOf="@+id/img_to"
        app:layout_constraintTop_toBottomOf="@+id/tv_start_station"/>

    <ImageView
        android:id="@+id/img_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/arrow"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_travel_number"
        app:srcCompat="@drawable/ic_narrow_arrow"/>

    <TextView
        android:id="@+id/tv_arrive_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="0dp"
        android:gravity="center_vertical"
        android:text="@string/arrive_time"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:layout_constraintLeft_toRightOf="@+id/img_to"
        app:layout_constraintTop_toTopOf="@id/tv_start_time"/>

    <TextView
        android:id="@+id/tv_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/start_date"
        app:layout_constraintRight_toRightOf="@+id/tv_start_time"
        app:layout_constraintTop_toBottomOf="@+id/tv_start_time"/>

    <TextView
        android:id="@+id/tv_start_station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/start_station"
        app:layout_constraintRight_toRightOf="@+id/tv_start_time"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_arrive_station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrive_station"
        app:layout_constraintLeft_toLeftOf="@+id/tv_arrive_time"
        app:layout_constraintTop_toTopOf="@+id/tv_start_station"/>

    <TextView
        android:id="@+id/tv_arrive_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrive_date"
        app:layout_constraintLeft_toLeftOf="@+id/tv_arrive_time"
        app:layout_constraintTop_toTopOf="@+id/tv_start_date"/>

    <TextView
        android:id="@+id/tv_seat_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/seat_number"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_to"/>

    <TextView
        android:id="@+id/tv_select_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/direction"
        android:textColor="?android:attr/textColorLink"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/tv_arrive_time"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_arrive_time"/>


</android.support.constraint.ConstraintLayout>
